--- a/packages/bodiless-cli/package.json
+++ b/packages/bodiless-cli/package.json
@@ -29,6 +29,7 @@
   "scripts": {
     "build": "tsc -p ./tsconfig.json ",
     "build:watch": "npm run build -- --watch",
+    "new": "./bin/bodiless new",
     "postpack": "rimraf oclif.manifest.json",
     "prepack": "rimraf lib && npm run build && oclif-dev manifest && oclif-dev readme",
     "test": "echo \"Error: run tests from root\" && exit 1"
@@ -42,7 +43,14 @@
     "@types/lodash.flow": "^3.5.6",
     "fs-extra": "^8.1.0",
     "globby": "^10",
-    "lodash": "^4.17.19"
+    "inquirer": "^8.2.0",
+    "js-yaml": "^4.1.0",
+    "lodash": "^4.17.19",
+    "find-git-root": "^1.0.4",
+    "ora": "^4.0.2",
+    "replace-in-file": "^6.3.2",
+    "tar": "^6.1.11",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1",
