--- a/packages/bodiless-migration-tool/package.json
+++ b/packages/bodiless-migration-tool/package.json
@@ -33,7 +33,7 @@
     "glob": "^7.1.6",
     "html-to-react-components": "^1.6.6",
     "htmlclean": "^3.0.8",
-    "js-yaml": "^3.13.1",
+    "js-yaml": "^4.1.0",
     "lodash": "^4.17.19",
     "minimatch": "^3.0.4",
     "patch-package": "^6.1.2",
@@ -56,7 +56,9 @@
     "@types/cheerio": "^0.22.22",
     "@types/dotenv": "^8.2.0",
     "@types/glob": "^7.1.1",
+    "@types/inquirer": "8.1.3",
     "@types/jest": "^24.0.18",
+    "@types/js-yaml": "^4.0.5",
     "@types/lodash": "^4.14.158",
     "@types/mime": "^2.0.1",
     "@types/minimatch": "^3.0.3",
@@ -68,6 +70,7 @@
     "@types/request": "^2.48.1",
     "@types/sanitize-html": "^1.20.1",
     "@types/shelljs": "^0.8.5",
+    "@types/tar": "^6.1.1",
     "babel-jest": "^24.9.0",
     "mime": "^2.4.4",
     "mock-fs": "^4.9.0",
