--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "sites:update": "npm run sites:pack && npm run sites:install",
     "sites:launch-test": "npm run sites:clone-local test-site && npm run sites:update test-site && cd sites/test-site && npm install --legacy-peer-deps && npm run start",
     "start": "npm run start --workspace=@bodiless/test-site",
+    "sync:fix": "syncpack fix-mismatches",
+    "sync:list": "syncpack list-mismatches",
     "test": "jest",
     "test:ci": "WAIT_ON_TIMEOUT=600000 start-server-and-test sites:launch-test http://localhost:8005 cy:run",
     "test:watch": "jest --watch"
@@ -119,6 +121,7 @@
     "postcss-cli": "^7.1.0",
     "react-test-renderer": "^17.0.2",
     "rimraf": "^2.6.3",
+    "syncpack": "^6.2.0",
     "ts-jest": "^26.4.4",
     "tslint": "^5.12.1",
     "tslint-config-airbnb": "^5.11.1",
