--- a/packages/gatsby-theme-bodiless/package.json
+++ b/packages/gatsby-theme-bodiless/package.json
@@ -110,7 +110,7 @@
     "tailwindcss": "^2.0.2"
   },
   "peerDependencies": {
-    "gatsby": "^3.0.0",
+    "gatsby": "~3.13.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
