--- a/packages/bc-elements/package.json
+++ b/packages/bc-elements/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bodiless/cx-layout",
+  "name": "@bodiless/bc-elements",
   "version": "0.3.6",
   "description": "Layout components for the bodiless cx design system",
   "author": "Chris Odem <coden@its.jnj.com>",
@@ -28,7 +28,6 @@
   "dependencies": {
     "@bodiless/components": "^0.3.6",
     "@bodiless/core": "^0.3.6",
-    "@bodiless/cx-elements": "^0.3.6",
     "@bodiless/fclasses": "^0.3.6",
     "@types/react-helmet": "^5.0.14",
     "lodash": "^4.17.19",
