--- a/packages/bc-layout/package.json
+++ b/packages/bc-layout/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@bodiless/components": "^0.3.6",
+    "@bodiless/components-ui": "^0.3.6",
     "@bodiless/core": "^0.3.6",
     "@bodiless/bc-elements": "^0.3.6",
     "@bodiless/fclasses": "^0.3.6",
