--- a/packages/bodiless-cli/package.json
+++ b/packages/bodiless-cli/package.json
@@ -46,8 +46,7 @@
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1",
-    "@types/node": "^16",
-    "nodemon": "^1.19.1"
+    "@types/node": "^16"
   },
   "oclif": {
     "commands": "./lib/commands",
