--- a/packages/bodiless-page/package.json
+++ b/packages/bodiless-page/package.json
@@ -6,7 +6,6 @@
   "license": "Apache-2.0",
   "sideEffects": false,
   "directories": {
-    "lib": "dist",
     "test": "__tests__"
   },
   "repository": {
@@ -17,11 +16,11 @@
     "access": "public"
   },
   "scripts": {
-    "build": "npm run copy && tsc -p ./tsconfig.json && npm run build:api-doc",
+    "build": "tsc -p ./tsconfig.json && npm run build:api-doc",
     "build:watch": "npm run build -- --watch",
     "build:api-doc": "typedoc --out doc/api src",
-    "clean": "rimraf -rf \"dist\" && rimraf index* && rimraf \"doc/api\"",
-    "copy": "copyfiles -u 1 \"./src/dist/**/*.{json,jpg,png}\" \".\""
+    "lint": "tslint ./src/**/*.ts?x",
+    "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
     "@bodiless/core": "^0.3.6",
