--- a/packages/bodiless-page/package.json
+++ b/packages/bodiless-page/package.json
@@ -23,6 +23,7 @@
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
+    "@bodiless/components": "^0.3.6",
     "@bodiless/core": "^0.3.6",
     "@bodiless/fclasses": "^0.3.6",
     "@bodiless/ui": "^0.3.6",
