--- a/packages/bodiless-carousel/package.json
+++ b/packages/bodiless-carousel/package.json
@@ -35,6 +35,7 @@
     "@bodiless/core": "^0.3.6",
     "@bodiless/fclasses": "^0.3.6",
     "lodash": "^4.17.19",
+    "mobx-react": "^7.2.1",
     "pure-react-carousel": "^1.27.6"
   },
   "peerDependencies": {
