--- a/packages/bodiless-layouts/package.json
+++ b/packages/bodiless-layouts/package.json
@@ -42,6 +42,7 @@
     "informed": "^3.34.0",
     "lodash": "^4.17.19",
     "md5-hex": "^4.0.0",
+    "mobx-react": "^7.2.1",
     "prop-types": "^15.7.2",
     "rc-tooltip": "^5.1.1",
     "re-resizable": "^4.11.0",
