--- a/packages/bodiless-page/package.json
+++ b/packages/bodiless-page/package.json
@@ -4,10 +4,18 @@
   "description": "BodilessJS page operations",
   "author": "Guilherme Zeni <gzeni@its.jnj.com>",
   "license": "Apache-2.0",
+  "main": "lib/index.js",
   "sideEffects": false,
+  "typings": "lib/index.d.ts",
   "directories": {
+    "lib": "lib",
     "test": "__tests__"
   },
+  "files": [
+    "/doc",
+    "/lib",
+    "/bodiless.docs.json"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/johnsonandjohnson/bodiless-js.git"
@@ -27,7 +35,6 @@
     "@bodiless/core": "^0.3.6",
     "@bodiless/fclasses": "^0.3.6",
     "@bodiless/ui": "^0.3.6",
-    "@bodiless/gatsby-theme-bodiless": "^0.3.6",
     "axios": "^0.21.0",
     "informed": "^3.34.0",
     "lodash": "^4.17.19",
