--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build:tailwind-configs": "cross-env NODE_ENV=production lerna run build:tailwind-configs --stream",
     "build:doc": "cross-env NODE_ENV=production lerna run build:doc --stream",
     "build:api-doc": "cross-env NODE_ENV=production lerna run build:api-doc --stream",
-    "check": "cross-env NODE_EnpNV=production lerna run check --stream",
+    "check": "cross-env NODE_ENV=production lerna run check --stream",
     "clean": "lerna run clean && rimraf .eslintcache sites/*/.env.development sites/*/.env.production",
     "cy:run": "cypress run --browser chrome --record --key 0dcfb624-e152-453a-9375-aa710adb57ab",
     "cy:open": "cypress open",
