--- a/packages/cx-image/package.json
+++ b/packages/cx-image/package.json
@@ -28,13 +28,13 @@
     "react": "^17.0.2"
   },
   "dependencies": {
-    "@bodiless/components": "0.3.6",
-    "@bodiless/components-ui": "0.3.6",
-    "@bodiless/core": "0.3.6",
-    "@bodiless/fclasses": "0.3.6",
-    "@bodiless/gatsby-theme-bodiless": "0.3.6",
-    "@bodiless/layouts": "0.3.6",
-    "@bodiless/layouts-ui": "0.3.6",
+    "@bodiless/components": "^0.3.6",
+    "@bodiless/components-ui": "^0.3.6",
+    "@bodiless/core": "^0.3.6",
+    "@bodiless/fclasses": "^0.3.6",
+    "@bodiless/gatsby-theme-bodiless": "^0.3.6",
+    "@bodiless/layouts": "^0.3.6",
+    "@bodiless/layouts-ui": "^0.3.6",
     "@bodiless/cx-elements": "^0.3.6",
     "lodash": "^4.17.19"
   }
