--- a/packages/cx-elements/package.json
+++ b/packages/cx-elements/package.json
@@ -19,10 +19,11 @@
     "access": "public"
   },
   "scripts": {
-    "build": "run-p build:lib build:api-doc",
+    "build": "run-p build:lib copy build:api-doc",
     "build:api-doc": "typedoc --out doc/api src",
     "build:lib": "tsc -p ./tsconfig.json",
     "build:watch": "npm run build:lib -- --watch",
+    "copy": "copyfiles -u 1 \"./src/*.css\" \"./lib/\"",
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
@@ -40,6 +41,8 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "tailwindcss": "^2.0.2",
+    "tailwindcss-dir": "^4.0.0",    
     "@types/uuid": "^3.4.4"
   },
   "peerDependencies": {
