--- a/packages/cx-editors/package.json
+++ b/packages/cx-editors/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/cx-editors",
-  "version": "0.3.7",
+  "version": "^0.3.7",
   "description": "Editor components for the bodiless cx design system",
   "author": "Chris Odem <coden@its.jnj.com>",
   "license": "Apache-2.0",
@@ -28,16 +28,16 @@
     "react": "^17.0.2"
   },
   "dependencies": {
-    "@bodiless/components": "0.3.7",
-    "@bodiless/components-ui": "0.3.7",
+    "@bodiless/components": "^0.3.7",
+    "@bodiless/components-ui": "^0.3.7",
     "@bodiless/cx-elements": "^0.3.7",
-    "@bodiless/core": "0.3.7",
-    "@bodiless/fclasses": "0.3.7",
-    "@bodiless/layouts": "0.3.7",
-    "@bodiless/layouts-ui": "0.3.7",
-    "@bodiless/richtext": "0.3.7",
-    "@bodiless/richtext-ui": "0.3.7",
-    "@bodiless/tokens": "0.3.7",
+    "@bodiless/core": "^0.3.7",
+    "@bodiless/fclasses": "^0.3.7",
+    "@bodiless/layouts": "^0.3.7",
+    "@bodiless/layouts-ui": "^0.3.7",
+    "@bodiless/richtext": "^0.3.7",
+    "@bodiless/richtext-ui": "^0.3.7",
+    "@bodiless/tokens": "^0.3.7",
     "lodash": "^4.17.19"
   }
 }
