--- a/packages/cx-link/package.json
+++ b/packages/cx-link/package.json
@@ -28,13 +28,14 @@
     "react": "^17.0.2"
   },
   "dependencies": {
-    "@bodiless/components": "0.3.7",
-    "@bodiless/components-ui": "0.3.7",
-    "@bodiless/core": "0.3.7",
-    "@bodiless/fclasses": "0.3.7",
-    "@bodiless/richtext": "0.3.7",
-    "@bodiless/richtext-ui": "0.3.7",
+    "@bodiless/components": "^0.3.7",
+    "@bodiless/components-ui": "^0.3.7",
+    "@bodiless/core": "^0.3.7",
+    "@bodiless/fclasses": "^0.3.7",
+    "@bodiless/richtext": "^0.3.7",
+    "@bodiless/richtext-ui": "^0.3.7",
     "@bodiless/cx-elements": "^0.3.7",
-    "lodash": "^4.17.19"
+    "lodash": "^4.17.19",
+    "tailwindcss": "^2.0.2"
   }
 }
