--- a/packages/cx-elements/package.json
+++ b/packages/cx-elements/package.json
@@ -31,13 +31,15 @@
     "@bodiless/components": "^0.3.7",
     "@bodiless/core": "^0.3.7",
     "@bodiless/fclasses": "^0.3.7",
+    "@types/webpack": "^5.0.0",
     "lodash": "^4.17.19",
     "mobx": "^6.0.0",
     "mobx-react": "^7.2.1",
     "react-contenteditable": "^3.2.6",
     "react-dropzone": "^10.1.5",
     "react-id-generator": "^3.0.1",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "webpack": "^5.69.1"
   },
   "devDependencies": {
     "tailwindcss": "^2.0.2",
