--- a/packages/cx-elements/package.json
+++ b/packages/cx-elements/package.json
@@ -9,7 +9,8 @@
   "typings": "lib/index.d.ts",
   "files": [
     "/lib",
-    "site.tailwind.config.js"
+    "site.tailwind.config.js",
+    "index.tailwind.css"
   ],
   "repository": {
     "type": "git",
@@ -19,8 +20,9 @@
     "access": "public"
   },
   "scripts": {
-    "build": "run-p build:lib copy build:api-doc",
+    "build": "run-p build:lib build:css copy build:api-doc",
     "build:api-doc": "typedoc --out doc/api src",
+    "build:css": "postcss index.tailwind.css -o ./src/bodiless.index.css",    
     "build:lib": "tsc -p ./tsconfig.json",
     "build:watch": "npm run build:lib -- --watch",
     "copy": "copyfiles -u 1 \"./src/*.css\" \"./lib/\"",
