--- a/sites/__cxstarter__/package.json
+++ b/sites/__cxstarter__/package.json
@@ -17,6 +17,7 @@
     "@bodiless/core": "^0.3.7",
     "@bodiless/cx-editors": "^0.3.7",
     "@bodiless/cx-elements": "^0.3.7",
+    "@bodiless/cx-link": "^0.3.7",
     "@bodiless/cx-templates": "^0.3.7",
     "@bodiless/documentation": "^0.3.7",    
     "@bodiless/fclasses": "^0.3.7",
@@ -34,7 +35,6 @@
     "mobx-react": "^7.2.1",
     "ora": "^4.0.2",
     "postcss": "^8.2.4",
-    "pure-react-carousel": "^1.27.6",
     "rc-tooltip": "^5.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
