--- a/sites/__cxstarter__/package.json
+++ b/sites/__cxstarter__/package.json
@@ -50,11 +50,10 @@
     "url": "https://github.com/johnsonandjohnson/bodiless-js.git"
   },
   "scripts": {
-    "build": "npm-run-all build:env-vars build:tailwind-configs build:lib build:scripts build:doc build:search",
+    "build": "npm-run-all build:env-vars build:tailwind-configs build:lib build:doc build:search",
     "build:doc": "bl-docs-build",
     "build:env-vars": "generate-env-vars",
     "build:lib": "bl-clear-logs && gatsby build && bl-validate-logs",
-    "build:scripts": "tsc -p ./tsconfig.json",
     "build:search": "npm run search-index",
     "build:tailwind-configs": "cross-env BODILESS_NPM_ROOT='../..' generate-tailwind-configs",
     "check": "tsc -p ./tsconfig.check.json",
