--- a/packages/__cxstarter__/package.json
+++ b/packages/__cxstarter__/package.json
@@ -38,6 +38,7 @@
     "@bodiless/cx-editors": "^0.3.7",
     "@bodiless/cx-elements": "^0.3.7",
     "@bodiless/cx-layout": "^0.3.7",
+    "@bodiless/cx-link": "^0.3.7",
     "@bodiless/cx-templates": "^0.3.7",
     "lodash": "^4.17.19",
     "tailwindcss": "^2.0.2"
