--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -42,12 +42,20 @@
       "@bodiless/core-ui/*": ["bodiless-core-ui/src/*"],
       "@bodiless/curator/": ["bodiless-curator/src/"],
       "@bodiless/curator/*": ["bodiless-curator/src/*"],
+      "@bodiless/cx-editors": ["cx-editors/src/"],
+      "@bodiless/cx-editors/*": ["cx-editors/src/*"],
       "@bodiless/cx-elements": ["cx-elements/src/"],
       "@bodiless/cx-elements/*": ["cx-elements/src/*"],
+      "@bodiless/cx-flowcontainer": ["cx-flowcontainer/src/"],
+      "@bodiless/cx-flowcontainer/*": ["cx-flowcontainer/src/*"],
       "@bodiless/cx-image": ["cx-image/src/"],
       "@bodiless/cx-image/*": ["cx-image/src/*"],
       "@bodiless/cx-layout": ["cx-layout/src/"],
       "@bodiless/cx-layout/*": ["cx-layout/src/*"],
+      "@bodiless/cx-link": ["cx-link/src/"],
+      "@bodiless/cx-link/*": ["cx-link/src/*"],
+      "@bodiless/cx-templates": ["cx-templates/src/"],
+      "@bodiless/cx-templates/*": ["cx-templates/src/*"],      
       "@bodiless/filtering": ["bodiless-filtering/src"],
       "@bodiless/filtering/*": ["bodiless-filtering/src/*"],
       "@bodiless/layouts": ["bodiless-layouts/src"],
