--- a/packages/__cxstarter__/package.json
+++ b/packages/__cxstarter__/package.json
@@ -37,6 +37,7 @@
     "@bodiless/richtext-ui": "^0.3.7",
     "@bodiless/cx-editors": "^0.3.7",
     "@bodiless/cx-elements": "^0.3.7",
+    "@bodiless/cx-flowcontainer": "^0.3.7",
     "@bodiless/cx-layout": "^0.3.7",
     "@bodiless/cx-link": "^0.3.7",
     "@bodiless/cx-templates": "^0.3.7",
