--- a/packages/cx-flowcontainer/package.json
+++ b/packages/cx-flowcontainer/package.json
@@ -29,7 +29,9 @@
   "dependencies": {
     "@bodiless/components": "^0.3.7",
     "@bodiless/components-ui": "^0.3.7",
+    "@bodiless/cx-editors": "^0.3.7",
     "@bodiless/cx-elements": "^0.3.7",
+    "@bodiless/cx-image": "^0.3.7",
     "@bodiless/core": "^0.3.7",
     "@bodiless/fclasses": "^0.3.7",
     "@bodiless/layouts": "^0.3.7",
