--- a/packages/cx-layout/package.json
+++ b/packages/cx-layout/package.json
@@ -9,7 +9,9 @@
   "typings": "lib/index.d.ts",
   "files": [
     "/lib",
-    "site.tailwind.config.js"
+    "site.tailwind.config.js",
+    "/bodiless.docs.json",
+    "/doc"
   ],
   "repository": {
     "type": "git",
