--- a/sites/__cxstarter__/package.json
+++ b/sites/__cxstarter__/package.json
@@ -40,7 +40,8 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-markdown": "^8.0.0",
-    "react-mde": "^11.0.0"
+    "react-mde": "^11.0.0",
+    "webpack": "^5.69.1"
   },
   "files": [
     "lib"
