--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.19.0",
     "fs-extra": "^8.1.0",
+    "gatsby-plugin-webpack-bundle-analyser-v2": "1.1.26",
     "glob": "^7.1.6",
     "husky": "^3.0.0",
     "identity-obj-proxy": "^3.0.0",
