--- a/packages/cx-elements/package.json
+++ b/packages/cx-elements/package.json
@@ -7,6 +7,14 @@
   "main": "lib/index.js",
   "sideEffects": false,
   "typings": "lib/index.d.ts",
+  "exports": {
+    ".": {
+      "bodiless:static": "./lib/index.static.js",
+      "default": "./lib/index.js"
+    },
+    "./lib/components/": "./lib/components/",
+    "./site.tailwind.config": "./site.tailwind.config.js"
+  },
   "files": [
     "/lib",
     "/bodiless.docs.json",
