--- a/packages/bodiless-accessibility/package.json
+++ b/packages/bodiless-accessibility/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/accessibility",
-  "version": "0.3.7",
+  "version": "1.0.0-beta.0",
   "description": "Accessibility tools for bodiless",
   "author": "Ivan Rudiuk <IRudiuk@its.jnj.com>",
   "license": "Apache-2.0",
