--- a/packages/bodiless-backend/package.json
+++ b/packages/bodiless-backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/backend",
-  "version": "0.3.7",
+  "version": "1.0.0-beta.0",
   "description": "",
   "main": "",
   "files": [
