--- a/packages/bodiless-bv/package.json
+++ b/packages/bodiless-bv/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/bv",
-  "version": "0.3.7",
+  "version": "1.0.0-beta.0",
   "description": "Provides bazaarvoice components.",
   "author": "Andrei Beliayeu <abeliaye@its.jnj.com>",
   "license": "Apache-2.0",
@@ -27,9 +27,9 @@
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
-    "@bodiless/components": "^0.3.7",
-    "@bodiless/core": "^0.3.7",
-    "@bodiless/fclasses": "^0.3.7",
+    "@bodiless/components": "^1.0.0-beta.0",
+    "@bodiless/core": "^1.0.0-beta.0",
+    "@bodiless/fclasses": "^1.0.0-beta.0",
     "lodash": "^4.17.19"
   },
   "peerDependencies": {
