--- a/packages/bodiless-components/package.json
+++ b/packages/bodiless-components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/components",
-  "version": "0.3.7",
+  "version": "1.0.0-beta.0",
   "description": "Reusable compoments",
   "author": "Heidi Vanyo <hvanyo@its.jnj.com>",
   "license": "Apache-2.0",
@@ -31,10 +31,10 @@
     "copy": "copyfiles -u 1 \"./src/**/*.{css,png}\" \"./lib/\""
   },
   "dependencies": {
-    "@bodiless/core": "^0.3.7",
-    "@bodiless/fclasses": "^0.3.7",
-    "@bodiless/layouts": "^0.3.7",
-    "@bodiless/ui": "^0.3.7",
+    "@bodiless/core": "^1.0.0-beta.0",
+    "@bodiless/fclasses": "^1.0.0-beta.0",
+    "@bodiless/layouts": "^1.0.0-beta.0",
+    "@bodiless/ui": "^1.0.0-beta.0",
     "axios": "^0.21.0",
     "common-tags": "^1.8.0",
     "copyfiles": "^2.1.1",
