--- a/packages/bodiless-core-ui/package.json
+++ b/packages/bodiless-core-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/core-ui",
-  "version": "0.3.7",
+  "version": "1.0.0-beta.0",
   "description": "Default UI for BodilessJS Core",
   "author": "Ivan Rudiuk <IRudiuk@its.jnj.com>",
   "license": "Apache-2.0",
@@ -26,9 +26,9 @@
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
-    "@bodiless/core": "^0.3.7",
-    "@bodiless/fclasses": "^0.3.7",
-    "@bodiless/ui": "^0.3.7",
+    "@bodiless/core": "^1.0.0-beta.0",
+    "@bodiless/fclasses": "^1.0.0-beta.0",
+    "@bodiless/ui": "^1.0.0-beta.0",
     "informed": "^3.34.0",
     "lodash": "^4.17.19",
     "rc-tooltip": "^5.1.1"
