--- a/packages/bodiless-organisms/package.json
+++ b/packages/bodiless-organisms/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/organisms",
-  "version": "0.3.7",
+  "version": "1.0.0-beta.0",
   "description": "Basic components to build out sites.",
   "author": "Ivan Rudiuk <IRudiuk@its.jnj.com>",
   "license": "Apache-2.0",
@@ -29,14 +29,14 @@
     "copy": "copyfiles -u 1 \"./src/**/*.{css,png}\" \"./lib/\""
   },
   "dependencies": {
-    "@bodiless/accordion": "^0.3.7",
-    "@bodiless/bv": "^0.3.7",
-    "@bodiless/components": "^0.3.7",
-    "@bodiless/components-ui": "^0.3.7",
-    "@bodiless/core": "^0.3.7",
-    "@bodiless/fclasses": "^0.3.7",
-    "@bodiless/richtext": "^0.3.7",
-    "@bodiless/richtext-ui": "^0.3.7",
+    "@bodiless/accordion": "^1.0.0-beta.0",
+    "@bodiless/bv": "^1.0.0-beta.0",
+    "@bodiless/components": "^1.0.0-beta.0",
+    "@bodiless/components-ui": "^1.0.0-beta.0",
+    "@bodiless/core": "^1.0.0-beta.0",
+    "@bodiless/fclasses": "^1.0.0-beta.0",
+    "@bodiless/richtext": "^1.0.0-beta.0",
+    "@bodiless/richtext-ui": "^1.0.0-beta.0",
     "@types/react-burger-menu": "^2.6.0",
     "@types/react-tag-autocomplete": "^6.0.0",
     "lodash": "^4.17.19",
