--- a/packages/bodiless-page/package.json
+++ b/packages/bodiless-page/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/page",
-  "version": "0.3.7",
+  "version": "1.0.0-beta.0",
   "description": "BodilessJS page operations",
   "author": "Guilherme Zeni <gzeni@its.jnj.com>",
   "license": "Apache-2.0",
@@ -31,10 +31,10 @@
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
-    "@bodiless/components": "^0.3.7",
-    "@bodiless/core": "^0.3.7",
-    "@bodiless/fclasses": "^0.3.7",
-    "@bodiless/ui": "^0.3.7",
+    "@bodiless/components": "^1.0.0-beta.0",
+    "@bodiless/core": "^1.0.0-beta.0",
+    "@bodiless/fclasses": "^1.0.0-beta.0",
+    "@bodiless/ui": "^1.0.0-beta.0",
     "axios": "^0.21.0",
     "informed": "^3.34.0",
     "lodash": "^4.17.19",
