--- a/packages/bodiless-youtube/package.json
+++ b/packages/bodiless-youtube/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/youtube",
-  "version": "0.3.7",
+  "version": "1.0.0-beta.0",
   "description": "Bodiless YouTube component.",
   "author": "Ivan Rudiuk <IRudiuk@its.jnj.com>",
   "license": "Apache-2.0",
@@ -28,9 +28,9 @@
     "copy": "copyfiles -u 1 \"./src/**/*.{css,png}\" \"./lib/\""
   },
   "dependencies": {
-    "@bodiless/components": "^0.3.7",
-    "@bodiless/core": "^0.3.7",
-    "@bodiless/fclasses": "^0.3.7",
+    "@bodiless/components": "^1.0.0-beta.0",
+    "@bodiless/core": "^1.0.0-beta.0",
+    "@bodiless/fclasses": "^1.0.0-beta.0",
     "lodash": "^4.17.19"
   },
   "peerDependencies": {
