--- a/packages/cx-templates/package.json
+++ b/packages/cx-templates/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bodiless/cx-templates",
   "sideEffects": false,
-  "version": "0.3.7",
+  "version": "1.0.0-beta.0",
   "description": "Provides designable templates for the CanvasX Design System",
   "author": "Andrei Beliayeu <abeliaye@its.jnj.com>",
   "license": "Apache-2.0",
@@ -29,13 +29,13 @@
     "react-helmet": "^6.1.0"
   },
   "dependencies": {
-    "@bodiless/components": "^0.3.7",
-    "@bodiless/core": "^0.3.7",
-    "@bodiless/cx-elements": "^0.3.7",
-    "@bodiless/cx-editors": "^0.3.7",
-    "@bodiless/cx-layout": "^0.3.7",
-    "@bodiless/fclasses": "^0.3.7",
-    "@bodiless/gatsby-theme-bodiless": "^0.3.7",
+    "@bodiless/components": "^1.0.0-beta.0",
+    "@bodiless/core": "^1.0.0-beta.0",
+    "@bodiless/cx-editors": "^1.0.0-beta.0",
+    "@bodiless/cx-elements": "^1.0.0-beta.0",
+    "@bodiless/cx-layout": "^1.0.0-beta.0",
+    "@bodiless/fclasses": "^1.0.0-beta.0",
+    "@bodiless/gatsby-theme-bodiless": "^1.0.0-beta.0",
     "lodash": "^4.17.19"
   }
 }
