--- a/sites/__cxstarter__/package.json
+++ b/sites/__cxstarter__/package.json
@@ -22,6 +22,7 @@
     "@bodiless/documentation": "^1.0.0-beta.0",
     "@bodiless/fclasses": "^1.0.0-beta.0",
     "@bodiless/gatsby-theme-bodiless": "^1.0.0-beta.0",
+    "@types/react-helmet": "^6.1.0",
     "autoprefixer": "^10.0.0",
     "docsify-cli": "^4.3.0",
     "dotenv": "^8.2.0",
