--- a/packages/cx-elements/package.json
+++ b/packages/cx-elements/package.json
@@ -7,6 +7,14 @@
   "main": "lib/index.js",
   "sideEffects": false,
   "typings": "lib/index.d.ts",
+  "exports": {
+    ".": {
+      "bodiless:static": "./lib/index.static.js",
+      "default": "./lib/index.js"
+    },
+    "./lib/components/": "./lib/components/",
+    "./site.tailwind.config": "./site.tailwind.config.js"
+  },
   "files": [
     "/lib",
     "/bodiless.docs.json",
@@ -33,6 +41,7 @@
     "@bodiless/components": "^0.3.7",
     "@bodiless/core": "^0.3.7",
     "@bodiless/fclasses": "^0.3.7",
+    "@bodiless/hydration": "^0.3.7",
     "@types/webpack": "^5.0.0",
     "lodash": "^4.17.19",
     "mobx": "^6.0.0",
