--- a/packages/fclasses/package.json
+++ b/packages/fclasses/package.json
@@ -26,8 +26,9 @@
     "url": "https://github.com/johnsonandjohnson/bodiless-js.git"
   },
   "scripts": {
-    "build": "tsc --version && tsc -p ./tsconfig.json && npm run build:api-doc",
-    "build:watch": "npm run build -- --watch",
+    "build": "npm run build:lib && npm run build:api-doc",
+    "build:lib": "tsc --version && tsc -p ./tsconfig.json",
+    "build:watch": "npm run build:lib -- --watch",
     "build:api-doc": "typedoc --out doc/api src",
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
