--- a/sites/__minimal__/package.json
+++ b/sites/__minimal__/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@bodiless/backend": "^1.0.0-beta.2",
+    "@bodiless/cli": "^1.0.0-beta.2",
     "@bodiless/components": "^1.0.0-beta.2",
     "@bodiless/components-ui": "^1.0.0-beta.2",
     "@bodiless/core": "^1.0.0-beta.2",
@@ -42,18 +43,17 @@
     "url": "https://github.com/johnsonandjohnson/bodiless-js.git"
   },
   "scripts": {
-    "build": "npm-run-all build:env-vars build:tailwind-configs build:lib build:doc",
+    "build": "npm-run-all build:env-vars build:lib build:doc",
     "build:doc": "bl-docs-build",
-    "build:env-vars": "generate-env-vars",
+    "build:env-vars": "bodiless generate-env-vars",
     "build:lib": "bl-clear-logs && gatsby build && bl-validate-logs",
     "build:stats": "BODILESS_BUILD_STATS=1 npm run build",
-    "build:tailwind-configs": "cross-env BODILESS_NPM_ROOT='.' generate-tailwind-configs",
     "check": "tsc -p ./tsconfig.check.json",
     "clean": "gatsby clean",
     "dev-backend": "bodiless-backend",
     "dev-frontend": "gatsby develop -p 8000",
     "prepare": "node ../../scripts/set-missing-symlinks.js @bodiless",
-    "prestart": "run-s build:env-vars build:tailwind-configs build:doc",
+    "prestart": "run-s build:env-vars build:doc",
     "serve": "gatsby serve",
     "serve:docs": "docsify serve ./doc",
     "start": "run-p -r dev-frontend dev-backend"
