--- a/packages/vital-list/package.json
+++ b/packages/vital-list/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@bodiless/cx-flowcontainer",
+  "name": "@bodiless/vital-list",
   "version": "1.0.0-beta.2",
-  "description": "Flowcontainer tokens for the bodiless cx design system",
+  "description": "Editable Lists for Bodiless/VitalDS",
   "author": "Chris Odem <coden@its.jnj.com>",
   "license": "Apache-2.0",
   "main": "lib/index.js",
@@ -9,8 +9,8 @@
   "typings": "lib/index.d.ts",
   "files": [
     "/lib",
+    "/getDocs.js",
     "/bodiless.docs.json",
-    "/tailwind.config.js",
     "/doc"
   ],
   "repository": {
@@ -28,21 +28,16 @@
     "react": "^17.0.2"
   },
   "dependencies": {
+    "@bodiless/cli": "^1.0.0-beta.2",
     "@bodiless/components": "^1.0.0-beta.2",
     "@bodiless/components-ui": "^1.0.0-beta.2",
     "@bodiless/core": "^1.0.0-beta.2",
     "@bodiless/cx-editors": "^1.0.0-beta.2",
     "@bodiless/cx-elements": "^1.0.0-beta.2",
     "@bodiless/cx-image": "^1.0.0-beta.2",
-    "@bodiless/vital-list": "^1.0.0-beta.2",
+    "@bodiless/cx-link": "^1.0.0-beta.2",
     "@bodiless/fclasses": "^1.0.0-beta.2",
     "@bodiless/hydration": "^1.0.0-beta.2",
-    "@bodiless/layouts": "^1.0.0-beta.2",
-    "@bodiless/layouts-ui": "^1.0.0-beta.2",
-    "@bodiless/richtext": "^1.0.0-beta.2",
-    "@bodiless/richtext-ui": "^1.0.0-beta.2",
-    "@bodiless/tokens": "^1.0.0-beta.2",
-    "@bodiless/cli": "^1.0.0-beta.2",
     "lodash": "^4.17.19"
   }
 }
