--- a/packages/fclasses/package.json
+++ b/packages/fclasses/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/fclasses",
-  "version": "1.0.0-beta.2",
+  "version": "1.0.0-beta.3",
   "description": "Allows for the injection of functional class into components.",
   "author": "Chris Oden <coden@its.jnj.com>",
   "homepage": "",
@@ -33,10 +33,10 @@
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
-    "@bodiless/cli": "^1.0.0-beta.2",
+    "@bodiless/cli": "^1.0.0-beta.3",
+    "babel-plugin-preval": "5.0.0",
     "lodash": "^4.17.19",
-    "uuid": "^3.3.2",
-    "babel-plugin-preval": "5.0.0"
+    "uuid": "^3.3.2"
   },
   "peerDependencies": {
     "react": "^17.0.2"
