--- a/packages/cx-layout/package.json
+++ b/packages/cx-layout/package.json
@@ -40,6 +40,7 @@
     "@bodiless/gatsby-theme-bodiless": "^1.0.0-beta.2",
     "@bodiless/hydration": "^1.0.0-beta.2",
     "@bodiless/cli": "^1.0.0-beta.2",
+    "@bodiless/vital-structuredata": "^1.0.0-beta.2",
     "lodash": "^4.17.19",
     "mobx": "^6.0.0",
     "mobx-react": "^7.2.1",
