--- a/packages/bodiless-cli/tsconfig.json
+++ b/packages/bodiless-cli/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.settings.json",
   "compilerOptions": {
     "target": "es2017",
+    "module": "CommonJS",
     "rootDir": "src",
     "outDir": "lib",
     "baseUrl": "."
