--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -54,6 +54,8 @@
       "@bodiless/cx-layout/*": ["cx-layout/src/*"],
       "@bodiless/cx-link": ["cx-link/src/"],
       "@bodiless/cx-link/*": ["cx-link/src/*"],
+      "@bodiless/vital-meta": ["vital-meta/src/"],
+      "@bodiless/vital-meta/*": ["vital-meta/src/*"],
       "@bodiless/cx-navigation": ["cx-navigation/src/"],
       "@bodiless/cx-navigation/*": ["cx-navigation/src/*"],
       "@bodiless/cx-templates": ["cx-templates/src/"],
