--- a/packages/bodiless-webpack/package.json
+++ b/packages/bodiless-webpack/package.json
@@ -35,6 +35,7 @@
     "webpack": "^5.69.1"
   },
   "devDependencies": {
-    "@types/node": "^16"
+    "@types/node": "^16",
+    "@statoscope/webpack-plugin": "^5.20.1"
   }
 }
