--- a/packages/gatsby-theme-bodiless/package.json
+++ b/packages/gatsby-theme-bodiless/package.json
@@ -62,29 +62,28 @@
     "@bodiless/ui": "^1.0.0-beta.4",
     "@bodiless/webpack": "^1.0.0-beta.4",
     "@types/walk": "^2.3.0",
-    "autoprefixer": "^10.0.0",
+    "autoprefixer": "^10.4.2",
     "axios": "^0.21.0",
-    "crypto-browserify": "^3.12.0",
+    "crypto-js": "^4.1.1",
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "fast-glob": "^3.2.5",
     "find-up": "^4.1.0",
     "fs-extra": "^8.1.0",
-    "gatsby": "~3.13.0",
-    "gatsby-image": "^2.4.16",
-    "gatsby-plugin-emotion": "^2.0.6",
-    "gatsby-plugin-google-fonts": "^0.0.4",
-    "gatsby-plugin-image": "^1.9.0",
-    "gatsby-plugin-manifest": "^3.6.0",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-emotion": "^7.10.0",
+    "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-image": "^2.10.1",
+    "gatsby-plugin-manifest": "^4.10.2",
     "gatsby-plugin-meta-redirect": "^1.1.1",
-    "gatsby-plugin-postcss": "4.8.0",
-    "gatsby-plugin-react-helmet": "^4.6.0",
+    "gatsby-plugin-postcss": "5.10.0",
+    "gatsby-plugin-react-helmet": "^5.10.0",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
-    "gatsby-plugin-robots-txt": "^1.6.9",
-    "gatsby-plugin-sharp": "^3.9.0",
-    "gatsby-plugin-typescript": "^3.12.0",
-    "gatsby-source-filesystem": "^3.9.0",
-    "gatsby-transformer-sharp": "^3.9.0",
+    "gatsby-plugin-robots-txt": "^1.7.0",
+    "gatsby-plugin-sharp": "^4.11.1",
+    "gatsby-plugin-typescript": "^4.10.1",
+    "gatsby-source-filesystem": "^4.11.1",
+    "gatsby-transformer-sharp": "^4.10.0",
     "git-branch": "^2.0.1",
     "glob": "^7.1.6",
     "informed": "^3.34.0",
@@ -92,7 +91,7 @@
     "lodash": "^4.17.19",
     "md5-file": "^5.0.0",
     "path-browserify": "^1.0.1",
-    "postcss": "^8.2.4",
+    "postcss": "^8.4.12",
     "process": "^0.11.10",
     "slash": "^2.0.0",
     "sleep-promise": "^8.0.1",
@@ -101,10 +100,10 @@
     "walkdir": "^0.4.1"
   },
   "devDependencies": {
-    "tailwindcss": "^2.0.2"
+    "tailwindcss": "^3.0.23"
   },
   "peerDependencies": {
-    "gatsby": "~3.13.0",
+    "gatsby": "^4.11.2",
     "mobx": "^6.0.0",
     "mobx-react": "^7.2.1",
     "react": "^17.0.2",
