--- a/packages/gatsby-theme-bodiless/package.json
+++ b/packages/gatsby-theme-bodiless/package.json
@@ -64,7 +64,7 @@
     "@types/walk": "^2.3.0",
     "autoprefixer": "^10.4.2",
     "axios": "^0.21.0",
-    "crypto-js": "^4.1.1",
+    "crypto-browserify": "^3.12.0",
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "fast-glob": "^3.2.5",
